--- a/src/componentes/Group.css
+++ b/src/componentes/Group.css
@@ -1,10 +1,19 @@
-.conteGroup{
+.contenedorGroup{
+    width: 20%;
+    margin: 0 auto;
     display: flex;
+}
+
+.grupoClass{
+    display: flex;
+    align-items: center;
+    margin-bottom: 4rem;
+    border: 12px solid white;
     text-align: center;
 }
-.liPais{
-    display: flex;
-    text-align: center;
-    justify-content: center;
-
+h2 {
+    margin-bottom: 46px;
+}
+h3{
+    margin-right: 76px;
 }
