--- a/src/componentes/Matchs.css
+++ b/src/componentes/Matchs.css
@@ -4,8 +4,30 @@
 }
 .conteinerEle{
     display: flex;
+    align-items: center;
 }
 .conteMatchU{
     display: flex;
     border: 1px solid red;
+}
+.btnDate{
+    padding: 10px;
+    width: 115px;
+    border: 2px solid #E6E6FA;
+    border-radius: 5px;
+    background: #fff;
+}
+input{
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    width: 320px;
+}
+select#selecDay {
+    width: 47px;
+    padding: -2px;
+    height: 36px;
+}
+label{
+    margin-right: 13px;
 }
