--- a/src/componentes/InfoMatch.css
+++ b/src/componentes/InfoMatch.css
@@ -1,5 +1,5 @@
 .conteGroup{
-    border: 1px solid black;
+    border: 12px solid white;
     width: 60%;
     margin: 0 auto;
     display: flex;
@@ -15,6 +15,19 @@
     display: flex;
     justify-content: space-around;
 }
-.conteTeam{
-    margin: 0 auto;
+.conteTeamInfo{
+    width: 36.4em;
+    display: flex;
+    justify-content: space-between;
+}
+.right {
+    display: flex;
+    flex-direction: column;
+}
+.lef {
+    display: flex;
+    flex-direction: column;
+}
+.titInfo{
+    align-items: center;
 }
