--- a/src/componentes/Team.css
+++ b/src/componentes/Team.css
@@ -1,6 +1,6 @@
 .teamContainer{
     display: inline-block;
-    border: 12px solid white;
+    border: 12px solid #742f37;
     margin-right: 12px;
     margin-left: 39px;
     margin-bottom: 15px;
