--- a/src/componentes/InfoMatch.css
+++ b/src/componentes/InfoMatch.css
@@ -1,5 +1,5 @@
 .conteGroup{
-    border: 12px solid white;
+    border: 12px solid #742f37;
     width: 60%;
     margin: 0 auto;
     display: flex;
@@ -11,14 +11,15 @@
     display: block;
     width: 100%;
 }
+
 .conteGols{
     display: flex;
     justify-content: space-around;
 }
 .conteTeamInfo{
-    width: 36.4em;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .right {
     display: flex;
@@ -29,5 +30,11 @@
     flex-direction: column;
 }
 .titInfo{
-    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 2px;
+    margin-bottom: 11px;
+}
+#aColor{
+    color:black;
 }
