--- a/src/componentes/MatchsUni.css
+++ b/src/componentes/MatchsUni.css
@@ -1,8 +1,11 @@
-.conteinerP{
+.conteinerMU{
+    margin-left: 25%;
+    width: 50%;
     display: flex;
+    flex-direction: column;
 }
 .conteMatchs{
-    border: 12px solid white;
+    border: 12px solid #742f37;
     margin: 1em;
 }
 img{
@@ -11,9 +14,9 @@ img{
     border: 1px solid black;
 }
 .conteTeam{
-    width: 41.4em;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 button{
     text-align: center;
@@ -22,4 +25,13 @@ button{
     margin-top: 37px;
     display: flex;
     flex-direction: row-reverse;
+}
+.btnInfo{
+    padding: 10px;
+    border:2px solid #742f37;
+    border-radius: 5px;
+    background: #fff;
+    box-shadow: black; 
+    width: 96px;
+    margin-bottom: 12px;
 }
